# acm

./: 1.cpp  2.cpp  CMakeLists.txt  README.md  data.in  data.out  main.cpp  sds.cpp  测试口算问题.cpp
checker/: D.cpp  bf.cpp  checker.cpp  pad.cpp  rnd.cpp  std.cpp
codelist/: 2.cpp  a.cpp  dijkstra.cpp  t.cpp  tmp.cpp  ttt.cpp  计算几何模板.cpp
codelist/Acwing/: 2188.cpp  2189.cpp  275.cpp  279.cpp  第四章 计算几何.cpp
codelist/Acwing/jinjie5/: 2702.cpp
codelist/Acwing/第二章 数据结构/: 2715. 后缀数组.cpp
codelist/Acwing/第四章 计算几何/: 1401. 围住奶牛.cpp  2119. 最佳包裹.cpp  2142. 最小矩形覆盖.cpp  2785. 信号增幅仪.cpp  2803. 凸多边形.cpp  2935. 信用卡凸包.cpp  2957. 赛车.cpp  2983. 玩具.cpp  2984. 线段.cpp  3028. 最小圆覆盖.cpp  t.cpp  板子.cpp  极角排序.cpp
codelist/Atcoder/AtCoder Beginner Contest 233/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  Ex.cpp  F.cpp  G.cpp
codelist/Atcoder/AtCoder Beginner Contest 234/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
codelist/Atcoder/AtCoder Beginner Contest 236/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  Ex.cpp  F.cpp  G.cpp
codelist/Atcoder/AtCoder Beginner Contest 237/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  Ex.cpp  Ex1.cpp  F.cpp  G.cpp
codelist/Atcoder/AtCoder Beginner Contest 242/: A.cpp  B.cpp  C.cpp
codelist/Atcoder/AtCoder Regular Contest 061/: A.cpp  B.cpp  C.cpp  C1.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 062/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 063/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 064/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 065/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 066/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 067/: A.cpp  B.cpp  C.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 068/: A.cpp  B.cpp  C.cpp  C1.cpp  D.cpp
codelist/Atcoder/AtCoder Regular Contest 133/: A.cpp  B.cpp  C.cpp
codelist/POJ/: 1279-Art Gallery .cpp  1474-Video Surveillance.cpp  1755-Triathlon.cpp  2318-TOYS.cpp  2398-Toy Storage.cpp  3384-Feng Shui .cpp  3384-Feng Shui 1.cpp  3525-Most Distant Point from the Sea.cpp  3555-Rotating Scoreboard.cpp  tt.cpp
codelist/luogu/: P1652 圆.cpp  P2257.cpp  P3177.cpp  P4051 [JSOI2007]字符加密.cpp  P4166.cpp  P4980.cpp  P5309.cpp  P6140 [USACO07NOV]Best Cow Line S.cpp  P6247 [SDOI2012]最近最远点对.cpp
codelist/other/: acc1.cpp  t.cpp
codelist/代码源/: #703. 删数.cpp  删除.cpp
codelist/实验课/: Strassen’s matrix multiplication.cpp
datamaker/: rnd.cpp  runstd.cpp  std.cpp
蓝桥杯2022国赛/: 60F.cpp  A.cpp  A1.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  H.cpp  I.cpp  tt.cpp
(+467 files in other folders)
