cmake_minimum_required(VERSION 3.21)
project(acm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(acm "main.cpp" codelist/tmp.cpp codelist/other/2022-队内练习赛01/A.cpp codelist/other/2022-队内练习赛01/B.cpp codelist/other/2022-队内练习赛01/C.cpp codelist/other/2022-队内练习赛01/D.cpp codelist/other/2022-队内练习赛01/E.cpp)
add_executable(acm "main.cpp" sds.cpp codelist/other/2022-天梯赛训练赛二/A.cpp codelist/other/2022-天梯赛训练赛二/3.cpp codelist/other/2022-天梯赛训练赛二/4.cpp codelist/other/2022-天梯赛训练赛二/5.cpp codelist/other/2022-天梯赛训练赛二/6.cpp codelist/other/2022-天梯赛训练赛二/7.cpp codelist/other/2022-天梯赛训练赛二/8.cpp codelist/other/2022-天梯赛训练赛二/9.cpp codelist/other/2022-天梯赛训练赛二/10.cpp codelist/other/2022-天梯赛训练赛二/11.cpp)
#add_executable(acm "main.cpp")