cmake_minimum_required(VERSION 3.21)
project(acm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(acm "main.cpp" codelist/tmp.cpp codelist/other/2022-队内练习赛01/A.cpp codelist/other/2022-队内练习赛01/B.cpp codelist/other/2022-队内练习赛01/C.cpp codelist/other/2022-队内练习赛01/D.cpp codelist/other/2022-队内练习赛01/E.cpp)
#add_executable(acm "main.cpp")
add_executable(acm "main.cpp" codelist/other/20220403/A.cpp codelist/other/2020410/A.cpp codelist/other/2020410/M.cpp codelist/other/2020410/H.cpp codelist/POJ/2318-TOYS.cpp "codelist/POJ/2398-Toy Storage.cpp" "codelist/Codeforces/2021-2022 ICPC, NERC, Northern Eurasia Onsite (Unrated, Online Mirror, ICPC Rules, Teams Preferred)/C.cpp" "codelist/Codeforces/2021-2022 ICPC, NERC, Northern Eurasia Onsite (Unrated, Online Mirror, ICPC Rules, Teams Preferred)/L.cpp" "codelist/Codeforces/2021-2022 ICPC, NERC, Northern Eurasia Onsite (Unrated, Online Mirror, ICPC Rules, Teams Preferred)/J.cpp" checker/pad.cpp)